# autoacmg

./: .gitignore  .graphifyignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
autoacmg/: __init__.py  __main__.py  cli.py
autoacmg/api/: __init__.py  routes.py  server.py
autoacmg/cache/: __init__.py  config.py  sqlite_cache.py
autoacmg/core/: __init__.py  acmg_criteria.py  classifier.py  evidence.py  variant.py
autoacmg/databases/: __init__.py  base.py  cadd.py  clingen.py  clinvar.py  cosmic.py  dbsnp.py  gnomad.py
autoacmg/reports/: __init__.py  csv_report.py  html_report.py  json_report.py  pdf_report.py
autoacmg/utils/: __init__.py  config.py  logging_config.py  vcf_parser.py
autoacmg/web/: app.js  index.html  styles.css
data/: expected_output.json  sample_input.vcf  test_variants.vcf
docs/: acmg_guidelines.md  api_reference.md  installation.md  usage.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: __init__.py  conftest.py  test_acmg_criteria.py  test_classifier.py  test_variant.py
tests/test_databases/: __init__.py  test_clinvar.py  test_gnomad.py
tests/test_reports/: __init__.py  test_json_report.py
