[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoacmg"
version = "0.1.0"
description = "Automated ACMG/AMP variant classification for clinical genome reporting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AutoACMG Contributors"},
]
keywords = ["acmg", "variant-classification", "genomics", "clinical", "vcf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "pysam>=0.22",
    "tabulate>=0.9",
    "jinja2>=3.1",
    "python-dateutil>=2.8",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic[email]>=2.0",
]
report = [
    "weasyprint>=60.0",
    "reportlab>=4.0",
]

[project.scripts]
autoacmg = "autoacmg.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoacmg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]
